# keep_vibing

./: .gitignore  LICENSE  README.md  pyproject.toml  start.py
backend/: api.py  app.py  auth.py  pty_wrapper.py  session_manager.py  store.py  ws.py
backend/tests/: test_api.py  test_pty_wrapper.py  test_session_manager.py  test_store.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Terminal.tsx  api.ts  clipboard.ts  themes.ts
frontend/src/components/: AddProjectModal.tsx  BottomTabBar.tsx  CodeEditor.tsx  ContextMenu.tsx  EditorPanel.tsx  FileTree.tsx  ImageViewer.tsx  LoginPage.tsx  MarkdownViewer.tsx  ProjectList.tsx  ResizeHandle.tsx  SessionHeader.tsx  SettingsPanel.tsx  Sidebar.tsx  TabBar.tsx  TerminalToolbar.tsx
